--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@ Friendly Message:<br>
   <div data-aos="fade-right">
 
   <table>
-              <tr><td style="text-align: center;"><canvas id="canvas_tt5fa2bad40b2a8" width="175" height="175"></canvas></td></tr>
-              <tr><td style="text-align: center; font-weight: bold"><a href="//24timezones.com/Stockholm/time" style="text-decoration: none" class="clock24" id="tz24-1604500180-c1239-eyJzaXplIjoiMTc1IiwiYmdjb2xvciI6IjAwOTlGRiIsImxhbmciOiJlbiIsInR5cGUiOiJhIiwiY2FudmFzX2lkIjoiY2FudmFzX3R0NWZhMmJhZDQwYjJhOCJ9" title="Stockholm actual time" target="_blank" rel="nofollow">Stockholm, Sweden</a></td></tr>
+                        <table>
+              <tr><td style="text-align: center;"><canvas id="canvas_tt5fa4439c56fb4" width="175" height="175"></canvas></td></tr>
+              <tr><td style="text-align: center; font-weight: bold"><a href="//24timezones.com/time-zone/trt" style="text-decoration: none" class="clock24" id="tz24-1604600732-tztrt-eyJzaXplIjoiMTc1IiwiYmdjb2xvciI6IjAwOTlGRiIsImxhbmciOiJlbiIsInR5cGUiOiJhIiwiY2FudmFzX2lkIjoiY2FudmFzX3R0NWZhNDQzOWM1NmZiNCJ9" title="current time in TRT" target="_blank" rel="nofollow">TRT</a></td></tr>
           </table>
 <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
 </div>
