--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <style>
 body {background-color:;}
-h1   {color: pink;}
-p    {color: pink;}
-h2   {color: pink;}
+h1   {color: red;}
+p    {color: red;}
+h2   {color: red;}
 </style>
 </head>
 <body>
