--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ body {background-color:;}
 h1   {color: red;}
 p    {color: red;}
 h2   {color: red;}
-</style>
+p    {color: red};
+  </style>
 </head>
 <body>
 
