--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ p    {color: red};
 <main>
   <p>Click here to show your support to Sybfat <a href="#">Support Alex!</a>.</p>
 
-  <a href="#"><img src="https://cdn.discordapp.com/emojis/772999892821082143.png?v=1" width="400" height="400" alt="Alex kekw."></a>
+  <a href="#"><img src="https://cdn.discordapp.com/emojis/772999892821082143.png?v=1" width="400" height="400" alt="Sybert."></a>
 
   <p>Things Sybret love:</p>
   <ul>
@@ -63,7 +63,7 @@ Friendly Message:<br>
 <style>
 body {
   padding: 25px;
-  background-image: url(https://cdn.discordapp.com/emojis/740264231814824066.png?v=1);
+  background-image: url(https://static-cdn.jtvnw.net/jtv_user_pictures/9736b169-f155-4cf2-a1ce-a2fedfff708d-profile_image-300x300.png);
   color: black;
   font-size: 25px;
 }
