--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ h1   {color: red;}
 p    {color: red;}
 h2   {color: red;}
 p    {color: red};
+li    {color: red};
+ol    {color: red};
+ul    {color: red};
   </style>
 </head>
 <body>
