--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ ul    {color: red};
     <li>Trashtalk Feary</li>
     <li>toffifee</li>
   </ul>
-  <p>Top 3 things Alex hate:</p>
+  <p>Top 3 things Serbit hate:</p>
   <ol>
     <li>kriNge people</li>
     <li>Sandalman</li>
