--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ ul    {color: red};
 </style>
 <h2>Sobert's AMAZING Website!</h2>
 <main>
-  <p>Click here to show your support to Sybfat <a href="#">Support Alex!</a>.</p>
+  <p>Click here to show your support to Sybfat <a href="#">Support El sorbeno!</a>.</p>
 
   <a href="#"><img src="https://cdn.discordapp.com/emojis/772999892821082143.png?v=1" width="400" height="400" alt="Sybert."></a>
 
