--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {
 </head>
 <body>
 
-<h2>Toggle Day/Night mode</h2>
+<h2>Toggle Comfy/catJAM mode</h2>
 <p>Click the button to toggle Comfy/catJAM mode on this page.</p>
 
 <button onclick="myFunction()">Comfy/catJAM</button>
